fix overlap on branch info in phone mode

--- a/assets/css/txtbranch.main.css
+++ b/assets/css/txtbranch.main.css
@@ -175,4 +175,7 @@ div.branch_info{
 		margin-left:-60px;
 		width:50px;
 	}
+	div.unlike_div, div.byline{
+		margin-right:20px;
+	}
 }
